# lerobot-custom-robots

./: LICENSE  README.md  pyproject.toml
lerobot_custom_robots/: __init__.py
lerobot_custom_robots/bi_so101_follower/: bi_so101_follower.py  config_bi_so101_follower.py
lerobot_custom_robots/bi_so101_leader/: bi_so101_leader.py  config_bi_so101_leader.py
